# QtRpc2

./: .gitignore  .hgtags  CMakeLists.txt  README.md  authtoken.cpp  authtoken.h  authtoken_p.h  automaticmetatyperegistry.h  clientmessagebus.cpp  clientmessagebus.h  clientmessagebus_p.h  clientprotocolbase.cpp  clientprotocolbase.h  clientprotocolbase_p.h  clientprotocoliodevice.cpp  clientprotocoliodevice.h  clientprotocoliodevice_p.h  clientprotocolsocket.cpp  clientprotocolsocket.h  clientprotocolsocket_p.h  clientprotocoltcp.cpp  clientprotocoltcp.h  clientprotocoltcp_p.h  clientprotocoltest.cpp  clientprotocoltest.h  clientprotocoltest_p.h  clientprotocolthread.cpp  clientprotocolthread.h  clientprotocolthread_p.h  clientproxy.cpp  clientproxy.h  clientproxy_p.h  message.cpp  message.h  message_p.h  proxybase.cpp  proxybase.h  proxybase_p.h  qtrpc2.pro  qtrpcglobal.h  (+62 more)
examples/async_client/: CMakeLists.txt  basicservice.h  basicservice.h.autosave  main.cpp  testobject.cpp  testobject.h
examples/async_server/: CMakeLists.txt  basicservice.cpp  basicservice.h  main.cpp
examples/auth_client/: CMakeLists.txt  main.cpp
examples/auth_server/: CMakeLists.txt  basicservice.cpp
examples/basic_client/: CMakeLists.txt  basicservice.cpp  basicservice.h  main.cpp
examples/basic_server/: CMakeLists.txt  basicservice.cpp  basicservice.h  main.cpp
examples/data_client/: CMakeLists.txt  basicservice.h  dataservice.cpp  dataservice.h  main.cpp
examples/data_server/: CMakeLists.txt  dataservice.cpp  dataservice.h  main.cpp
examples/discovery_client/: CMakeLists.txt  main.cpp  testobject.cpp  testobject.h
examples/discovery_server/: CMakeLists.txt  main.cpp
examples/event_client/: CMakeLists.txt  basicservice.h  main.cpp  timeobject.cpp  timeobject.h  timeservice.cpp  timeservice.h
examples/event_server/: CMakeLists.txt  main.cpp  timeservice.cpp  timeservice.h
examples/md5auth_client/: CMakeLists.txt  basicservice.h  main.cpp
examples/md5auth_server/: CMakeLists.txt  basicservice.cpp  basicservice.h
examples/ssl_client/: CMakeLists.txt  basicservice.cpp  basicservice.h  main.cpp
examples/ssl_server/: CMakeLists.txt  examplecert.pem  main.cpp
examples/thread_client/: CMakeLists.txt  main.cpp
examples/thread_server/: CMakeLists.txt  main.cpp
include/: AuthToken  AutomaticMetatypeRegistry  ClientMessageBus  ClientProtocolBase  ClientProtocolIODevice  ClientProtocolSocket  ClientProtocolTcp  ClientProtocolTest  ClientProtocolThread  ClientProxy  Message  ProxyBase  QtRpcGlobal  ReturnValue  Server  ServerProtocolInstanceBase  ServerProtocolInstanceIODevice  ServerProtocolInstanceSocket  ServerProtocolInstanceTcp  ServerProtocolListenerBase  ServerProtocolListenerProcess  ServerProtocolListenerSocket  ServerProtocolListenerTcp  ServerThread  ServiceFactory  ServiceFinder  ServiceProxy  ServicePublisher  Signature  Sleeper
lib/: CMakeLists.txt  authtoken.cpp  authtoken.h  authtoken_p.h  clientprotocoliodevice.cpp  clientprotocoliodevice.h  clientprotocoliodevice_p.h  clientprotocolsocket.cpp  clientprotocolsocket.h  clientprotocolsocket_p.h  clientprotocoltcp.cpp  clientprotocoltcp_p.h  clientprotocoltest.h  clientproxy.cpp  clientproxy.h  message.cpp  proxybase.cpp  proxybase_p.h  qtrpcglobal.h  qtrpcprivate.h  qxtavahipoll.cpp  qxtavahipoll.h  qxtdiscoverableservicename.cpp  qxtmdns.h  qxtmdns_avahi_p.h  qxtmdns_bonjour.cpp  qxtpimpl.h  qxtservicebrowser.h  qxtservicebrowser_p.h  qxtzeroconf.h  returnvalue.cpp  returnvalue.h  server.h  server_p.h  serverprotocolinstancebase.cpp  serverprotocolinstancebase.h  serverprotocolinstanceiodevice.cpp  serverprotocolinstanceiodevice.h  serverprotocolinstanceiodevice_p.h  serverprotocolinstancesocket.cpp  (+22 more)
testclient/: CMakeLists.txt  main.cpp  testcaller.cpp  testcaller.h  testclient.cpp  testclient.h  testsyncro.cpp  testsyncro.h  testthread.cpp  testthread.h
testserver/: CMakeLists.txt  callerservice.cpp  callerservice.h  main.cpp  testserver.cpp  testserver.h  testsyncroserver.cpp  testsyncroserver.h
